Improve perf by grouping drawings and using bitmap

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Fractal\Fractal\packages.config" />
   <repository path="..\Fractal2\Fractal2\packages.config" />
 </repositories>
