--- a/Fractal/Fractal/packages.config
+++ b/Fractal/Fractal/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FSharpx.TypeProviders.Xaml" version="1.8.41" targetFramework="net45" />
+  <package id="WriteableBitmapEx" version="1.0.12.0" targetFramework="net451" />
 </packages>
